--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1026,13 +1026,22 @@ apply now
 */
 
 section.apply-now {
-  background-image: url(../images/apply-bg.jpg);
+  position: relative;
+  background-image: url(../images/apply-bg-1.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 140px 0px;
 }
+
+/*section.apply-now img::before {
+  position: absolute; content: ''; display: block; top: 0; left: 0; height: 100%; width: 100%;
+
+  background: rgba(40, 39, 40, 0.4);
+
+  mix-blend-mode: multiply
+}*/
 
 section.apply-now .item {
   background-color: rgba(250,250,250,0.15);
