--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1211,7 +1211,7 @@ section.our-courses {
 }
 
 section.hero {
-  background-image: url(../images/new/pexels-1.jpg);
+  background-image: url(../images/apply-bg.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
